[gd_scene load_steps=3 format=3 uid="uid://d2r5t70au1i3o"]

[ext_resource type="Theme" uid="uid://dua8qfbb1i0cc" path="res://addons/behavior_states/assets/theme.tres" id="1_theme"]
[ext_resource type="Script" uid="uid://d4dstuc3sy00s" path="res://addons/behavior_states/scenes/tabs/editor.gd" id="2_script"]

[node name="Editor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
theme_override_constants/margin_top = 10
script = ExtResource("2_script")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 200

[node name="Sidebar" type="VBoxContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="PaletteLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Paleta de Blocos"
horizontal_alignment = 1

[node name="StateBlocksLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "State"

[node name="StateBlocks" type="ItemList" parent="HSplitContainer/Sidebar"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_theme")
item_count = 3
item_0/text = "FilterBlock"
item_1/text = "ActionBlock"
item_2/text = "TriggerBlock"

[node name="ItemBlocksLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.4, 0.5, 0.9, 1)
text = "Item"

[node name="ItemBlocks" type="ItemList" parent="HSplitContainer/Sidebar"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_theme")
item_count = 2
item_0/text = "ModifierBlock"
item_1/text = "PropertyBlock"

[node name="SkillBlocksLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.9, 0.4, 0.6, 1)
text = "Skill"

[node name="SkillBlocks" type="ItemList" parent="HSplitContainer/Sidebar"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_theme")
item_count = 2
item_0/text = "RequirementBlock"
item_1/text = "UnlockBlock"

[node name="Separator" type="HSeparator" parent="HSplitContainer/Sidebar"]
layout_mode = 2

[node name="ContainersLabel" type="Label" parent="HSplitContainer/Sidebar"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
text = "Containers"

[node name="ContainerBlocks" type="ItemList" parent="HSplitContainer/Sidebar"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_theme")
item_count = 4
item_0/text = "State"
item_1/text = "Item"
item_2/text = "Skill"
item_3/text = "Compose"

[node name="ButtonsContainer" type="VBoxContainer" parent="HSplitContainer/Sidebar"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 6

[node name="ClearButton" type="Button" parent="HSplitContainer/Sidebar/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "Limpar Canvas"

[node name="SaveButton" type="Button" parent="HSplitContainer/Sidebar/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("1_theme")
text = "Salvar Resource"

[node name="GraphContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_theme")

[node name="GraphEdit" type="GraphEdit" parent="HSplitContainer/GraphContainer"]
layout_mode = 2
theme = ExtResource("1_theme")
right_disconnects = true

[node name="PlaceholderLabel" type="Label" parent="HSplitContainer/GraphContainer/GraphEdit"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 80.0
text = "Arraste blocos da paleta para criar recursos"
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Salvar Resource"
size = Vector2i(600, 400)
ok_button_text = "Salvar"
file_mode = 4
access = 2
filters = PackedStringArray("*.tres ; Resource")

[connection signal="item_activated" from="HSplitContainer/Sidebar/StateBlocks" to="." method="_on_block_activated" binds= ["state"]]
[connection signal="item_activated" from="HSplitContainer/Sidebar/ItemBlocks" to="." method="_on_block_activated" binds= ["item"]]
[connection signal="item_activated" from="HSplitContainer/Sidebar/SkillBlocks" to="." method="_on_block_activated" binds= ["skill"]]
[connection signal="item_activated" from="HSplitContainer/Sidebar/ContainerBlocks" to="." method="_on_container_activated"]
[connection signal="pressed" from="HSplitContainer/Sidebar/ButtonsContainer/ClearButton" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HSplitContainer/Sidebar/ButtonsContainer/SaveButton" to="." method="_on_save_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
